feat: conditional asm test